--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           type="submit"
           class="btn vvv btn-lg"
         >
-          <i class="fab fa-facebook"></i> Ver fotos y videos
+          <i class="fab fa-facebook"></i> CONTINUAR
         </button>
       </div>
     </center>
